@@ -226,7 +226,8 @@ static void handle_error(JabberMessage *jm)
 	buf = g_strdup_printf(_("Message delivery to %s failed: %s"),
 			jm->from, jm->error);
 
-	gaim_notify_error(jm->js->gc, _("Jabber Message Error"), buf, jm->body);
+	gaim_notify_formatted(jm->js->gc, _("Jabber Message Error"), _("Jabber Message Error"), buf,
+			jm->xhtml ? jm->xhtml : jm->body, NULL, NULL);
 
 	g_free(buf);
 }
